--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">My Remembrall</string>
     <string name="day_and_date">Day and Date</string>
+    <string name="add_task">Add Task</string>
+    <string name="refresh">Refresh</string>
+    <string name="settings">Settings</string>
 </resources>
